FixContrastComponents

--- a/app/components/ProjectCard/index.module.css
+++ b/app/components/ProjectCard/index.module.css
@@ -133,7 +133,7 @@
   bottom: 0;
 
   left: 0;
-  width: 100%;
+  width: 90%;
   padding: 1rem;
   background: rgba(255, 255, 255, 0.3);
   color: rgb(0, 0, 0);
@@ -159,8 +159,8 @@
 
   margin: 0 0 0 0;
 }
-.p {
-  margin: 0 0 0 0;
+.textContainer p {
+  padding: 0 4px 0 0;
 }
 .h3 {
   margin: 0 0 0 0;
