--- a/app/home/index.module.css
+++ b/app/home/index.module.css
@@ -105,7 +105,7 @@
   color: rgb(2, 34, 129);
 }
 .ContactButton {
-  background-color: white;
+  background-color: rgb(255, 255, 255, 0.5);
   border: #86d8e3 solid 3px;
   width: 150px;
   height: 60px;
